test/error/error9.pas
{缺少运算符号}
Program prog;
var
x, y : integer;
begin
  writeln('Please input two integers x and y');
  readln(a, b);
  writeln('a  +  b = ', a b);